[metadata]
name = robotframework-onap
author = Daniel Rose
author_email = dr695h@att.com
version = 11.0.0
home-page = https://github.com/onap/testsuite-python-testing-utils
classifier =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Framework :: Robot Framework
    Framework :: Robot Framework :: Library
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.8

[files]
packages =
    vcpeutils
    ONAPLibrary

[wheel]
universal = 1
